--- a/python_crash_course.ipynb
+++ b/python_crash_course.ipynb
@@ -607,9 +607,9 @@
      "output_type": "stream",
      "text": [
       "The following languages have been mentioned:\n",
-      "C\n",
+      "Ruby\n",
       "Python\n",
-      "Ruby\n"
+      "C\n"
      ]
     }
    ],
@@ -704,6 +704,222 @@
     "while 'cat' in pets:\n",
     "    pets.remove('cat')\n",
     "print(pets)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Python Function Arguments\n",
+    "You can call a function by using the following types of formal arguments −\n",
+    "\n",
+    "* Required arguments\n",
+    "* Keyword arguments\n",
+    "* Default arguments\n",
+    "* Variable-length arguments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Required arguments\n",
+    "Required arguments are the arguments passed to a function in correct positional order. Here, the number of arguments in the function call should match exactly with the function definition."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "printme() missing 1 required positional argument: 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-29-ca43c01fae83>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m# Now you can call printme function\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mprintme\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: printme() missing 1 required positional argument: 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "def printme(str):\n",
+    "    \"This prints a passed string into this function\"\n",
+    "    print(str)\n",
+    "    return;\n",
+    "\n",
+    "# Now you can call printme function\n",
+    "printme()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Keyword arguments\n",
+    "Keyword arguments are related to the function calls. When you use keyword arguments in a function call, the caller identifies the arguments by the parameter name.\n",
+    "\n",
+    "This allows you to skip arguments or place them out of order because the Python interpreter is able to use the keywords provided to match the values with parameters. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name:  miki\n",
+      "Age:  50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function definition is here\n",
+    "def printinfo( name, age ):\n",
+    "    \"This prints a passed info into this function\"\n",
+    "    print(\"Name: \", name)\n",
+    "    print(\"Age: \", age)\n",
+    "    return;\n",
+    "\n",
+    "# Now you can call printinfo function\n",
+    "printinfo( age=50, name=\"miki\" )\n",
+    "# Note that the order of parameters does not matter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Default arguments\n",
+    "A default argument is an argument that assumes a default value if a value is not provided in the function call for that argument. The following example gives an idea on default arguments, it prints default age if it is not passed −"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name:  miki\n",
+      "Age  50\n",
+      "Name:  miki\n",
+      "Age  35\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function definition is here\n",
+    "def printinfo( name, age = 35 ):\n",
+    "    \"This prints a passed info into this function\"\n",
+    "    print(\"Name: \", name)\n",
+    "    print(\"Age \", age)\n",
+    "    return;\n",
+    "\n",
+    "# Now you can call printinfo function\n",
+    "printinfo( age=50, name=\"miki\" )\n",
+    "printinfo( name=\"miki\" )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Variable-length arguments\n",
+    "You may need to process a function for more arguments than you specified while defining the function. These arguments are called variable-length arguments and are not named in the function definition, unlike required and default arguments.\n",
+    "An asterisk (*) is placed before the variable name that holds the values of all nonkeyword variable arguments. This tuple remains empty if no additional arguments are specified during the function call. Following is a simple example −"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output is: \n",
+      "10\n",
+      "Output is: \n",
+      "70\n",
+      "60\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function definition is here\n",
+    "def printinfo( arg1, *vartuple ):\n",
+    "    \"This prints a variable passed arguments\"\n",
+    "    print(\"Output is: \")\n",
+    "    print(arg1)\n",
+    "    for var in vartuple:\n",
+    "        print(var)\n",
+    "    return;\n",
+    "\n",
+    "# Now you can call printinfo function\n",
+    "printinfo( 10 )\n",
+    "printinfo( 70, 60, 50 )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scope of Variables\n",
+    "All variables in a program may not be accessible at all locations in that program. This depends on where you have declared a variable.\n",
+    "\n",
+    "The scope of a variable determines the portion of the program where you can access a particular identifier. There are two basic scopes of variables in Python\n",
+    "* Global variables\n",
+    "* Local variables\n",
+    "\n",
+    "### Global vs. Local variables\n",
+    "Variables that are defined inside a function body have a local scope, and those defined outside have a global scope.\n",
+    "\n",
+    "This means that local variables can be accessed only inside the function in which they are declared, whereas global variables can be accessed throughout the program body by all functions. When you call a function, the variables declared inside it are brought into scope. Following is a simple example −"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inside the function local total :  30\n",
+      "Outside the function global total :  0\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = 0; # This is global variable.\n",
+    "# Function definition is here\n",
+    "def sum( arg1, arg2 ):\n",
+    "    # Add both the parameters and return them.\"\n",
+    "    total = arg1 + arg2; # Here total is local variable.\n",
+    "    print(\"Inside the function local total : \", total)\n",
+    "    return total;\n",
+    "\n",
+    "# Now you can call sum function\n",
+    "sum( 10, 20 );\n",
+    "print(\"Outside the function global total : \", total)"
    ]
   }
  ],
