--- a/python_crash_course.ipynb
+++ b/python_crash_course.ipynb
@@ -607,9 +607,9 @@
      "output_type": "stream",
      "text": [
       "The following languages have been mentioned:\n",
-      "Ruby\n",
       "Python\n",
-      "C\n"
+      "C\n",
+      "Ruby\n"
      ]
     }
    ],
@@ -740,14 +740,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "printme() missing 1 required positional argument: 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-29-ca43c01fae83>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m# Now you can call printme function\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mprintme\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: printme() missing 1 required positional argument: 'str'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In exception!\n"
      ]
     }
    ],
@@ -758,7 +754,10 @@
     "    return;\n",
     "\n",
     "# Now you can call printme function\n",
-    "printme()"
+    "try:\n",
+    "    printme()\n",
+    "except:\n",
+    "    print(\"In exception!\")"
    ]
   },
   {
@@ -920,6 +919,217 @@
     "# Now you can call sum function\n",
     "sum( 10, 20 );\n",
     "print(\"Outside the function global total : \", total)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dog():\n",
+    "    \"\"\"A simple attempt to model a dog.\"\"\"\n",
+    "    def __init__(self, name, age):\n",
+    "        \"\"\"Initialize name and age attributes.\"\"\"\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "    def sit(self):\n",
+    "        \"\"\"Simulate a dog sitting in response to a command.\"\"\"\n",
+    "        print(self.name.title() + \" is now sitting.\")\n",
+    "    def roll_over(self):\n",
+    "        \"\"\"Simulate rolling over in response to a command.\"\"\"\n",
+    "        print(self.name.title() + \" rolled over!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inheritance\n",
+    "You don’t always have to start from scratch when writing a class. If the class\n",
+    "you’re writing is a specialized version of another class you wrote, you can\n",
+    "use inheritance. When one class inherits from another, it automatically takes\n",
+    "on all the attributes and methods of the first class. The original class is\n",
+    "called the parent class, and the new class is the child class. The child class\n",
+    "inherits every attribute and method from its parent class but is also free to\n",
+    "define new attributes and methods of its own."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016 Tesla Model S\n",
+      "This car has a 70-kWh battery.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car():\n",
+    "    \"\"\"A simple attempt to represent a car.\"\"\"\n",
+    "    def __init__(self, make, model, year):\n",
+    "        self.make = make\n",
+    "        self.model = model\n",
+    "        self.year = year\n",
+    "        self.odometer_reading = 0\n",
+    "    def get_descriptive_name(self):\n",
+    "        long_name = str(self.year) + ' ' + self.make + ' ' + self.model\n",
+    "        return long_name.title()\n",
+    "    def read_odometer(self):\n",
+    "        print(\"This car has \" + str(self.odometer_reading) + \" miles on it.\")\n",
+    "    def update_odometer(self, mileage):\n",
+    "        if mileage >= self.odometer_reading:\n",
+    "            self.odometer_reading = mileage\n",
+    "        else:\n",
+    "            print(\"You can't roll back an odometer!\")\n",
+    "    def increment_odometer(self, miles):\n",
+    "        self.odometer_reading += miles\n",
+    "    def fill_gas_tank():\n",
+    "        print(\"Gas tank filled !\")\n",
+    "        \n",
+    "class ElectricCar(Car):\n",
+    "    \"\"\"Represent aspects of a car, specific to electric vehicles.\"\"\"\n",
+    "    def __init__(self, make, model, year):\n",
+    "        \"\"\"Initialize attributes of the parent class.\"\"\"\n",
+    "        super().__init__(make, model, year)\n",
+    "        self.battery_size = 70\n",
+    "    def describe_battery(self):\n",
+    "        \"\"\"Print a statement describing the battery size.\"\"\"\n",
+    "        print(\"This car has a \" + str(self.battery_size) + \"-kWh battery.\")\n",
+    "    # Override parent functions:\n",
+    "    def fill_gas_tank():\n",
+    "        \"\"\"Electric cars don't have gas tanks.\"\"\"\n",
+    "        print(\"This car doesn't need a gas tank!\")\n",
+    "        \n",
+    "my_tesla = ElectricCar('tesla', 'model s', 2016)\n",
+    "print(my_tesla.get_descriptive_name())\n",
+    "my_tesla.describe_battery()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.1415926535\n",
+      "8979323846\n",
+      "2643383279\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('pi_digits.txt') as file_object:\n",
+    "    contents = file_object.read()\n",
+    "    print(contents)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reading Line by Line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.1415926535\n",
+      "\n",
+      "8979323846\n",
+      "\n",
+      "2643383279\n"
+     ]
+    }
+   ],
+   "source": [
+    "filename = 'pi_digits.txt'\n",
+    "with open(filename) as file_object:\n",
+    "    for line in file_object:\n",
+    "        print(line)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Making a List of Lines from a File\n",
+    "When you use with, the file object returned by open() is only available inside\n",
+    "the with block that contains it. If you want to retain access to a file’s contents\n",
+    "outside the with block, you can store the file’s lines in a list inside the block\n",
+    "and then work with that list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.1415926535\n",
+      "8979323846\n",
+      "2643383279\n"
+     ]
+    }
+   ],
+   "source": [
+    "filename = 'pi_digits.txt'\n",
+    "with open(filename) as file_object:\n",
+    "    lines = file_object.readlines()\n",
+    "for line in lines:\n",
+    "    print(line.rstrip())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Writing to a File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = 'programming.txt'\n",
+    "with open(filename, 'w') as file_object:\n",
+    "    file_object.write(\"I love programming.\")\n",
+    "# Appending to a File\n",
+    "with open(filename, 'a') as file_object:\n",
+    "    file_object.write(\"\\nI also love finding meaning in large datasets.\\n\")"
    ]
   }
  ],
