--- a/python_basics/python_crash_course.ipynb
+++ b/python_basics/python_crash_course.ipynb
@@ -690,6 +690,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To change the output to what you want, use the keyword arguments sep and end to print ( ). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LOVE 30 82.2\n",
+      "LOVE,30,82.2\n",
+      "LOVE,30,82.2!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('LOVE', 30, 82.2)\n",
+    "print('LOVE', 30, 82.2, sep=',')\n",
+    "print('LOVE', 30, 82.2, sep=',', end='!!\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p:y:t:h:o:n:"
+     ]
+    }
+   ],
+   "source": [
+    "for i in \"python\":\n",
+    "    print(i, end=\":\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Using continue in a Loop\n",
     "Rather than breaking out of a loop entirely without executing the rest of its\n",
     "code, you can use the continue statement to return to the beginning of the\n",
