--- a/python_basics/python_crash_course.ipynb
+++ b/python_basics/python_crash_course.ipynb
@@ -177,6 +177,99 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number one portal is Python, For, and You.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python program showing  \n",
+    "# a use of format() method\n",
+    "\n",
+    "# combining positional and keyword arguments \n",
+    "print('Number one portal is {0}, {1}, and {other}.'\n",
+    "     .format('Python', 'For', other ='You')) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Center aligned string with fillchr: \n",
+      "#############I love python##############\n",
+      "The left aligned string is : \n",
+      "I love python---------------------------\n",
+      "The right aligned string is : \n",
+      "---------------------------I love python\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python program to \n",
+    "# format a output using \n",
+    "# string() method \n",
+    "  \n",
+    "strng = \"I love python\"\n",
+    "    \n",
+    "# Printing the center aligned   \n",
+    "# string with fillchr  \n",
+    "print (\"Center aligned string with fillchr: \")  \n",
+    "print (strng.center(40, '#'))  \n",
+    "  \n",
+    "# Printing the left aligned   \n",
+    "# string with \"-\" padding   \n",
+    "print (\"The left aligned string is : \")  \n",
+    "print (strng.ljust(40, '-')) \n",
+    "  \n",
+    "# Printing the right aligned string  \n",
+    "# with \"-\" padding   \n",
+    "print (\"The right aligned string is : \")  \n",
+    "print (strng.rjust(40, '-')) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "one-sixth is : \n",
+      "0.17\n",
+      "\n",
+      "Left, center and right alignment with Formatting: \n",
+      "|I         |   Love   |    Python|\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Rounding off Integers \n",
+    "String1 = \"{0:.2f}\".format(1/6) \n",
+    "print(\"\\none-sixth is : \") \n",
+    "print(String1) \n",
+    "  \n",
+    "# String alignment \n",
+    "String1 = \"|{:<10}|{:^10}|{:>10}|\".format('I','Love','Python') \n",
+    "print(\"\\nLeft, center and right alignment with Formatting: \") \n",
+    "print(String1) "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -730,6 +823,35 @@
    "source": [
     "for i in \"python\":\n",
     "    print(i, end=\":\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print without newline in Python 3.x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 "
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3, 4] \n",
+    "  \n",
+    "# printing a element in same \n",
+    "# line \n",
+    "for i in range(4): \n",
+    "    print(a[i], end =\" \")"
    ]
   },
   {
