--- a/python_basics/python_crash_course.ipynb
+++ b/python_basics/python_crash_course.ipynb
@@ -322,20 +322,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['honda', 'yamaha', 'suzuki', 'ducati']\n"
+      "['honda', 'yamaha', 'suzuki', 'ducati']\n",
+      "['honda', 'yamaha', 'suzuki', 'ducati', 'kawasaki', 'harley']\n"
      ]
     }
    ],
    "source": [
     "motorcycles = ['honda', 'yamaha', 'suzuki']\n",
     "motorcycles.append('ducati')\n",
+    "print(motorcycles)\n",
+    "motorcycles.extend(['kawasaki', 'harley'])\n",
     "print(motorcycles)"
    ]
   },
@@ -580,6 +583,72 @@
     "dimensions = (200, 50)\n",
     "for dimension in dimensions:\n",
     "    print(dimension)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 7, 97, 77, 23, 73, 61]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python code to illustrate \n",
+    "# filter() with lambda() \n",
+    "li = [5, 7, 22, 97, 54, 62, 77, 23, 73, 61] \n",
+    "final_list = list(filter(lambda x: (x%2 != 0) , li)) \n",
+    "print(final_list) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 14, 44, 194, 108, 124, 154, 46, 146, 122]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python code to illustrate  \n",
+    "# map() with lambda()  \n",
+    "# to get double of a list. \n",
+    "li = [5, 7, 22, 97, 54, 62, 77, 23, 73, 61] \n",
+    "final_list = list(map(lambda x: x*2 , li)) \n",
+    "print(final_list) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "193\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python code to illustrate  \n",
+    "# reduce() with lambda() \n",
+    "# to get sum of a list \n",
+    "from functools import reduce\n",
+    "li = [5, 8, 10, 20, 50, 100] \n",
+    "sum = reduce((lambda x, y: x + y), li) \n",
+    "print (sum) "
    ]
   },
   {
